# course-grpc

./: .devcontainer  .gitignore  CMakeLists.txt  LICENSE  README.md  grpc.cmake
.devcontainer/: Dockerfile  devcontainer.json
00-proto/: .gitignore  CMakeLists.txt
00-proto/docs/: docs.md  index.html
00-proto/proto/: average.proto  checksum.proto  evens.proto  fibonacci.proto  math.proto  sqrt.proto  sum.proto
00-setup/.devcontainer/: Dockerfile
01-sum/: CMakeLists.txt
01-sum/.devcontainer/: devcontainer.json
01-sum/proto/: math.grpc.pb.cc  math.grpc.pb.h  math.pb.cc  math.pb.h  math.proto  sum.proto
01-sum/src/: client.cpp  main.cpp  server.cpp
02-fibonacci/: CMakeLists.txt
02-fibonacci/.devcontainer/: Dockerfile  devcontainer.json
02-fibonacci/proto/: fibonacci.proto
02-fibonacci/src/: client.cpp  server.cpp
03-average/: .gitignore  CMakeLists.txt
03-average/.devcontainer/: Dockerfile  devcontainer.json
03-average/proto/: average.proto
03-average/src/: client.cpp  server.cpp
04-evens/: CMakeLists.txt
04-evens/src/: client.cpp  server.cpp
05-sum-async/: CMakeLists.txt
05-sum-async/src/: client-thread.cpp  client.cpp  server.cpp
06-sum-async-thread/: CMakeLists.txt
06-sum-async-thread/src/: client.cpp  server.cpp
06-sum-callback/: CMakeLists.txt
06-sum-callback/src/: client.cpp  server-default.cpp  server.cpp
07-fibonacci-callback/: CMakeLists.txt
07-fibonacci-callback/src/: client.cpp  server.cpp
07-sum-callback/: CMakeLists.txt
07-sum-callback-default/src/: client.cpp  server.cpp
07-sum-callback/src/: client.cpp  server-default.cpp  server.cpp
08-average-callback/: CMakeLists.txt
08-average-callback/src/: client.cpp  server.cpp
08-sum-callback-custom/: CMakeLists.txt
08-sum-callback-custom/src/: client.cpp  server.cpp
08-sum-callback/src/: client.cpp  server.cpp
09-evens-callback/: CMakeLists.txt
09-evens-callback/src/: client.cpp  server.cpp
09-fibonacci-callback/: CMakeLists.txt
09-fibonacci-callback/src/: client.cpp  fibonacci.hpp  server.cpp
10-average-callback/: CMakeLists.txt
10-average-callback/src/: client.cpp  server.cpp
20-errors/: CMakeLists.txt
20-errors/src/: client.cpp  server.cpp  sqrt-callback.hpp  sqrt-reactor.hpp
21-deadline/: CMakeLists.txt
21-deadline/src/: client.cpp  server.cpp
22-interceptor/: CMakeLists.txt
22-interceptor/src/: client.cpp  client_interceptor.hpp  fibonacci.hpp  server.cpp  server_interceptor.hpp
23-multiplex/: CMakeLists.txt
23-multiplex/src/: client.cpp  server.cpp  sqrt-callback.hpp
24-cancel/: CMakeLists.txt
24-cancel/src/: client.cpp  server.cpp
25-retry/: CMakeLists.txt
25-retry/src/: client.cpp  policy.json  server.cpp
26-wait_for_ready/: CMakeLists.txt
26-wait_for_ready/src/: client.cpp  policy.json  server.cpp
27-deadline/: CMakeLists.txt
27-deadline/src/: client.cpp  policy.json  server.cpp
28-load_balance/: CMakeLists.txt  Dockerfile  README.md
28-load_balance/src/: client.cpp  policy.json  policy_1st.json  policy_rr.json  server.cpp
29-health/: CMakeLists.txt
29-health/src/: client.cpp  policy.json  server.cpp
30-keepalive/: CMakeLists.txt
30-keepalive/src/: client.cpp  server.cpp
31-compress/: CMakeLists.txt
31-compress/src/: client.cpp  dataset.csv
31-metadata/: CMakeLists.txt
31-metadata/src/: client.cpp  server.cpp
32-compress/: CMakeLists.txt
32-compress/src/: server.cpp
32-ssl/: CMakeLists.txt
32-ssl/pki/client/: client.crt  client.csr  client.key
32-ssl/pki/root/: root.crt  root.csr  root.key  root.pem  root.pfx  root.srl
32-ssl/pki/server/: server.crt  server.csr  server.key
32-ssl/src/: client.cpp  server.cpp
32-ssl/src/pki/: client.conf  root.conf  server.conf  ssl.sh
33-reflection/: CMakeLists.txt  README.md
33-reflection/src/: client.cpp  server.cpp
33-ssl/: .gitignore  CMakeLists.txt
33-ssl/src/: client.cpp  server.cpp
34-reflection/: CMakeLists.txt  README.md
34-reflection/src/: FibonacciServiceImpl.hpp  FibonacciSlowServiceImpl.hpp
35-documentation/: README.md
proto/: average.proto
